--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -3052,7 +3052,7 @@ msgstr "Umsatzsteuersatz"
 msgid ""
 "Do you need to pay sales tax on your tickets? In this case, please enter the "
 "applicable tax rate here in percent. If you have a more complicated tax "
-"situation, you can add more tax rates and detailled configuration later."
+"situation, you can add more tax rates and detailed configuration later."
 msgstr ""
 "Müssen Sie Umsatzsteuern auf Ihre Tickets zahlen? In diesem Fall tragen Sie "
 "bitte den gültigen Steuersatz hier in Prozent ein. Wenn Sie eine "
@@ -3151,7 +3151,7 @@ msgstr "Letztes Änderungsdatum"
 msgid ""
 "The last date users can modify details of their orders, such as attendee "
 "names or answers to questions. If you use the event series feature and an "
-"order contains tickest for multiple event dates, the earliest date will be "
+"order contains tickets for multiple event dates, the earliest date will be "
 "used."
 msgstr ""
 "Das späteste Datum, zu dem Benutzer die Details ihrer Bestellung (z.B. Namen "
@@ -7666,7 +7666,7 @@ msgid ""
 "automatically. You can either send them one-by-one in an order of your "
 "choice by clicking the buttons next to a line in this table (if sufficient "
 "quota is available) or you can press the big button below this text to send "
-"out as many vouchers as currently possible to the persons who waitet longest."
+"out as many vouchers as currently possible to the persons who waited longest."
 msgstr ""
 "Sie haben eingestellt, dass Gutscheine <strong>nicht</strong> an die "
 "Personen auf dieser Liste verschickt werden. Sie können die Gutscheine "
@@ -8450,7 +8450,7 @@ msgstr "Ein Gerät zur Zwei-Faktor-Authentifizierung wurde hinzugefügt."
 msgid ""
 "Please note that you still need to enable two-factor authentication for your "
 "account using the buttons below to make a second factor required for logging "
-"into your accont."
+"into your account."
 msgstr ""
 "Bitte beachten Sie, dass sie die Zwei-Faktor-Authentifizierung noch mit dem "
 "unten verfügbaren Knopf für Ihr Konto aktiviert müssen, damit der zweite "
@@ -9108,7 +9108,7 @@ msgstr "PayPal meldete ein Ereignis: {}"
 msgid ""
 "The PayPal transaction %(payment)s has succeeded, but the order %(order)s is "
 "expired and the product was sold out in the meantime. Therefore, the payment "
-"could not be acceped. Please contact the user and refund the money via "
+"could not be accepted. Please contact the user and refund the money via "
 "PayPal's interface."
 msgstr ""
 "Die PayPal-Transaktion %(payment)s war erfolgreich, aber die Bestellung "
@@ -9139,7 +9139,7 @@ msgstr "Diese Aktion kann nicht rückgängig gemacht werden."
 
 #: pretix/plugins/paypal/templates/pretixplugins/paypal/checkout_payment_confirm.html:3
 msgid ""
-"The total amount listed above will be withdrawn from your PayPal acocunt "
+"The total amount listed above will be withdrawn from your PayPal account "
 "after the confirmation of your purchase."
 msgstr ""
 "Der obige Gesamtbetrag wird nach der Bestätigung Ihrer Bestellung von Ihrem "
@@ -9825,7 +9825,7 @@ msgstr "Stripe meldete ein Ereignis: {}"
 msgid ""
 "The Stripe transaction <a %(stripe_href)s>%(charge)s</a> has succeeded, but "
 "the order %(order)s is expired and the product was sold out in the meantime. "
-"Therefore, the payment could not be acceped. Please contact the user and "
+"Therefore, the payment could not be accepted. Please contact the user and "
 "refund the money via Stripe's interface."
 msgstr ""
 "Die Stripe-Zahlung <a %(stripe_href)s>%(charge)s</a> war erfolgreich, aber "
@@ -10107,7 +10107,7 @@ msgstr ""
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:108
 msgid ""
-"The editor is tested with recent versions of Google Chome, Mozilla Firefox "
+"The editor is tested with recent versions of Google Chrome, Mozilla Firefox "
 "and Opera. Other browsers, especially Internet Explorer or Microsoft Edge, "
 "might have problems displaying your background PDF or loading the correct "
 "fonts."
