--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -133,7 +133,7 @@ msgstr ""
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
-"We currenctly cannot reach the server, but we keep trying. Last error code: "
+"We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
 msgstr ""
 "Wir können den Server aktuell nicht erreichen, versuchen es aber weiter. "
@@ -146,7 +146,7 @@ msgstr "Diese Anfrage hat zu lange gedauert. Bitte erneut versuchen."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 msgid ""
-"We currenctly cannot reach the server. Please try again. Error code: {code}"
+"We currently cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
 "Wir können den Server aktuell nicht erreichen. Bitte versuchen Sie es noch "
 "einmal. Fehlercode: {code}"
