Add signal pretix.control.signals.event_settings_widget

--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -5864,7 +5864,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/event/widget.html:63
 msgid "Generate widget code"
-msgstr "Widget-Coder generieren"
+msgstr "Widget-Code generieren"
 
 #: pretix/control/templates/pretixcontrol/events/create_base.html:4
 #: pretix/control/templates/pretixcontrol/events/create_base.html:6
