--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -4094,7 +4094,7 @@ msgid ""
 "installation ID, the current version of pretix and your installed plugins "
 "and the number of active and inactive events in your installation to servers "
 "operated by the pretix developers. We will only store anonymous data, never "
-"any IP adresses and we will not know who you are or where to find your "
+"any IP addresses and we will not know who you are or where to find your "
 "instance. You can disable this behaviour here at any time."
 msgstr ""
 "Während des Update-Checks übermittelt pretix eine anonyme, eindeutige "
